@@ -1,3 +1,7 @@
+2008-05-24 Sarka Todorova <sarka.todorova@cern.ch>
+	* fix parallel building of simplified and blended material 
+	* tagged as MuonTrackingGeometry-00-03-14
+
 2008-05-22 Sarka Todorova <sarka.todorova@cern.ch>
 	* change default inert setup to exact 
           (temporarily to avoid problems with blended material)
